<resources>
    <string name="app_name">TextString</string>
    <string name="textView"></string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn0">0</string>
    <string name="btnPoint">.</string>
    <string name="btnC">C</string>
    <string name="btnPercent">%</string>
    <string name="btnDivision">/</string>
    <string name="btnChangeOfSign">+/-</string>
    <string name="btnX">x</string>
    <string name="btnMinus">-</string>
    <string name="btnPlus">+</string>
    <string name="btnEqually">=</string>
    <string name="K">K</string>
    <string name="U">U</string>
    <string name="N1">N</string>
    <string name="A">A</string>
    <string name="F">F</string>
    <string name="I">I</string>
    <string name="N2">N</string>
</resources>
